deploy/k8s/overlays/dev/delete-admin-web-deployment.yaml
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-web
  namespace: shopcloud
