deploy/k8s/overlays/dev/patch-cart-cognito-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: shopcloud
spec:
  template:
    spec:
      containers:
        - name: cart
