deploy/k8s/overlays/dev/patch-catalog-cognito-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: shopcloud
spec:
  template:
    spec:
      containers:
        - name: catalog
