deploy/k8s/overlays/dev/patch-checkout-cognito-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: shopcloud
spec:
  template:
    spec:
      containers:
        - name: checkout
