deploy/k8s/overlays/dev/patch-customer-cognito-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-web
  namespace: shopcloud
spec:
  template:
    spec:
      containers:
        - name: customer-web
