deploy/k8s/overlays/dev/delete-admin-web-service.yaml
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: admin-web
  namespace: shopcloud
