deploy/k8s/overlays/dev/delete-internal-admin-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-admin
  namespace: shopcloud
